--- a/portfolio/CSA/app/css/last.css
+++ b/portfolio/CSA/app/css/last.css
@@ -14,8 +14,11 @@
     transition: .3s; }
   #last_page .custom_dots {
     position: absolute;
-    bottom: 20px;
-    width: 100%; }
+    top: 20px;
+    width: 100%;
+    -webkit-transition: .3s ease;
+    -o-transition: .3s ease;
+    transition: .3s ease; }
     #last_page .custom_dots span {
       position: absolute;
       font: 1.8em "HelveticaNeueCyrRoman";
@@ -85,7 +88,7 @@
       width: 100%;
       position: relative; }
     #last_page .container .slider2 {
-      padding-top: 20px; }
+      padding-bottom: 20px; }
       #last_page .container .slider2 .slide {
         margin: 0 15px;
         height: 500px;
