--- a/portfolio/CSA/app/scss/last.scss
+++ b/portfolio/CSA/app/scss/last.scss
@@ -12,8 +12,9 @@
     }
     .custom_dots {
         position: absolute;
-        bottom: 20px;
+        top: 20px;
         width: 100%;
+        transition: .3s ease;
         span {
             position: absolute;
             font: 1.8em "HelveticaNeueCyrRoman";
@@ -71,7 +72,7 @@
             position: relative;
         }
         .slider2 {
-            padding-top: 20px;
+            padding-bottom: 20px;
             .slide {
                 margin: 0 15px;
                 height: 500px;
