--- a/Shop/catalogue-page/app/scss/catalog.scss
+++ b/Shop/catalogue-page/app/scss/catalog.scss
@@ -22,12 +22,13 @@ ul {
 }
 
 .popular_categories_block {
-    border: 1px solid #b3b3b3;
+    border: 1px solid #e6e6e6;
     border-bottom: none;
     margin-top: 15px;
+    background: #fff;
     .section {
          padding: 0 20px;
-         border-bottom: 1px solid #b3b3b3;
+         border-bottom: 1px solid #e6e6e6;
         .tab_title {
             padding: 20px 0;
             span {
