--- a/Shop/catalogue-page/app/css/catalog.css
+++ b/Shop/catalogue-page/app/css/catalog.css
@@ -15,12 +15,13 @@ ul {
       width: 100%; }
 
 .popular_categories_block {
-  border: 1px solid #b3b3b3;
+  border: 1px solid #e6e6e6;
   border-bottom: none;
-  margin-top: 15px; }
+  margin-top: 15px;
+  background: #fff; }
   .popular_categories_block .section {
     padding: 0 20px;
-    border-bottom: 1px solid #b3b3b3; }
+    border-bottom: 1px solid #e6e6e6; }
     .popular_categories_block .section .tab_title {
       padding: 20px 0; }
       .popular_categories_block .section .tab_title span {
