--- a/Shop/catalogue-page/app/scss/filter.scss
+++ b/Shop/catalogue-page/app/scss/filter.scss
@@ -48,17 +48,19 @@
                     font-weight: bold;
                     color: #040000;
                     line-height: 160%;
+                    position: relative;
                 }
                 .description {
                     opacity: 0;
                     margin-left: 7px;
                     transition: .3s;
-                    position: relative;
+                    position: absolute;
+                    right: -24px;
+                    bottom: -3px;
                     i {
                         font-size: 1.5em;
                         color: #bab8b6;
                         transition: .3s;
-                        position: absolute;
                         &:hover {
                             color: #626262;
                         }
